--- a/dist.ini
+++ b/dist.ini
@@ -1,4 +1,4 @@
-version=0.01
+version=0.02
 
 name=App-CreateSparseFile
 
@@ -13,5 +13,5 @@ script= func=/App/CreateSparseFile/create_sparse_file, prefer_lite=1
 Rinci=1.1.0
 
 perl=5.010001
-SHARYANTO::File::Util=0
+File::MoreUtil=0
 SHARYANTO::Text::Prompt=0.76
