--- a/META.yml
+++ b/META.yml
@@ -18,15 +18,15 @@ meta-spec:
 name: App-CreateSparseFile
 requires:
   File::MoreUtil: '0'
+  IO::Prompt::I18N: '0'
   Perinci::CmdLine::Any: '0.06'
   Rinci: v1.1.0
-  SHARYANTO::Text::Prompt: '0.76'
   perl: '5.010001'
 resources:
   bugtracker: https://rt.cpan.org/Public/Dist/Display.html?Name=App-CreateSparseFile
   homepage: https://metacpan.org/release/App-CreateSparseFile
   repository: git://github.com/perlancar/perl-App-CreateSparseFile.git
-version: '0.02'
+version: '0.03'
 x_Dist_Zilla:
   perl:
     version: '5.018002'
@@ -130,7 +130,7 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::OurDate
       name: '@Author::PERLANCAR/OurDate'
-      version: '0.01'
+      version: '0.02'
     -
       class: Dist::Zilla::Plugin::PodWeaver
       config:
@@ -186,7 +186,7 @@ x_Dist_Zilla:
             -
               class: Pod::Weaver::Plugin::Rinci
               name: '@Author::PERLANCAR/Rinci'
-              version: '0.21'
+              version: '0.23'
             -
               class: Pod::Weaver::Section::Leftovers
               name: '@Author::PERLANCAR/Leftovers'
@@ -198,11 +198,11 @@ x_Dist_Zilla:
             -
               class: Pod::Weaver::Section::Completion::GetoptLongComplete
               name: '@Author::PERLANCAR/Completion::GetoptLongComplete'
-              version: '0.04'
+              version: '0.05'
             -
               class: Pod::Weaver::Section::Completion::PerinciCmdLine
               name: '@Author::PERLANCAR/Completion::PerinciCmdLine'
-              version: '0.07'
+              version: '0.08'
             -
               class: Pod::Weaver::Section::Homepage::DefaultCPAN
               name: '@Author::PERLANCAR/Homepage::DefaultCPAN'
